--- a/style.css
+++ b/style.css
@@ -1,7 +1,15 @@
-h1,em {color: blue;}
+/********** General **********/
+*{margin: 0
+  padding 0;
+box-sizing: border-box;}
+
+
+
+h1,em {color: yellow;}
 h2,em {color:red;}
 h3,em {color: greenyellow;}
 p,em {color:white;}
 ul,em {color:black;}
 body,em {background:linear-gradient(grey,black);}
 nav,em {color:white}
+footer,em{color:white;}
