--- a/style.css
+++ b/style.css
@@ -1,15 +1,108 @@
-/********** General **********/
-*{margin: 0
-  padding 0;
-box-sizing: border-box;}
+/************************************************************** General *****************************************************************/
+*{ 
+   margin: 0 0;
+   padding:0;
+   box-sizing: border-box;
+   list-style: none;
+}
 
+#container {
+    width: 80%;
+    margin: auto;
+}
+    
+body{
+    background-color: #d8b90b;}
+main{
+    background-color: white;
+padding:0.5em ;}        
+    
+/* ***************************************************************Header******************************************************************** */
+header{
+    background-color:blue;
+    color: white;
+    text-align:center;
+    padding: 0;
+}
+h2{ 
+    padding:0.1em;
+}
+header>figure>img{
+    width: 100%;
+    vertical-align: top;
+    
+    
+    
 
+    
 
-h1,em {color: yellow;}
-h2,em {color:red;}
-h3,em {color: greenyellow;}
-p,em {color:white;}
-ul,em {color:black;}
-body,em {background:linear-gradient(grey,black);}
-nav,em {color:white}
-footer,em{color:white;}
+}
+/* **************************************************************Main nav************************************************************************* */
+    
+article{
+    width: 60%;
+    text-align:justify;
+    font-size:large;
+    padding:0.5em
+}
+ul{
+    background-color:brgba(0, 60, 255, 0.548);
+    color:white
+}
+h1{
+    color: #d8b90b;
+} 
+
+nav{
+    background-color: blue;
+    width:20%;
+font-size:1sem;
+height: fit-content;
+padding:0.5em}
+
+nav{
+    color: white;
+
+}
+nav a{ 
+    color: white;
+}
+main{
+    display: flex;
+}
+aside{
+    background-color: rgb(13, 43, 175);
+    font-size:large
+}
+aside{
+    color: white;
+    width:20%;
+}
+img{width: 100%;}
+h2{
+    color:white;
+    
+}
+h3{
+    color: white;text-align: center;
+}
+p{
+text-align: justify;font-size:1em;
+
+    
+}
+
+ul{
+    color:black;
+}
+
+nav>ul>li>a{
+    color:white
+}
+
+footer{
+    background-color:blue;
+    text-align: justify;
+    text-align: center;
+    color: white;
+}
