--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ padding:0.5em ;
     
 /* ***************************************************************Header******************************************************************** */
 header{
-    background-color:blue;
+    background-color: rgb(13, 43, 175);
     color: white;
     text-align:center;
     padding: 0;
@@ -56,7 +56,7 @@ h1{
 } 
 
 nav{
-    background-color: blue;
+    background-color: rgb(13, 43, 175);
     width:20%;
 font-size:1sem;
 height: fit-content;
@@ -122,7 +122,7 @@ nav>ul>li>a{
 }
 /* xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxFooterxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx */
 footer{
-    background-color:blue;
+    background-color: rgb(13, 43, 175);
     text-align: justify;
     text-align: center;
     color: white;
